--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -72,6 +72,6 @@
 
 	// Uncomment to connect as a non-root user. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
-	// "workspaceFolder": "/workspace/ultron",
-	// "workspaceMount": "source=/home/admin/workspace/ultron,target=/workspace/ultron,type=bind,consistency=cached"
+	// "workspaceFolder": "/workspace/components",
+	// "workspaceMount": "source=/home/admin/workspace/components,target=/workspace/components,type=bind,consistency=cached"
 }
