--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ jobs:
   unittest:
     strategy:
       matrix:
-        go-version: [1.18.x, 1.19.x]
+        go-version: [1.19.x]
         os: [ubuntu-latest, macos-latest]
       fail-fast: true
     runs-on: ${{matrix.os}}
@@ -25,7 +25,7 @@ jobs:
       with:
         report_paths: report.xml
     - name: Upload code coverage report
-      if: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.18.x' }}
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.19.x' }}
       uses: actions/upload-artifact@v2
       with:
         name: code-coverage-report
