--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,15 +2,7 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.163.1/containers/go
 {
 	"name": "Go",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"args": {
-			// Update the VARIANT arg to pick a version of Go: 1, 1.16, 1.15
-			"VARIANT": "1.19-bullseye",
-			// Options
-			"NODE_VERSION": "none"
-		}
-	},
+	"image": "mcr.microsoft.com/devcontainers/go:0-1.20-bullseye",
 	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 
 	"customizations": {
@@ -29,7 +21,6 @@
 				"golang.Go",
 				"eamodio.gitlens",
 				"mohsen1.prettify-json",
-				"zxh404.vscode-proto3",
 				"bierner.markdown-preview-github-styles",
 				"cschleiden.vscode-github-actions",
 				"redhat.vscode-yaml",
@@ -68,8 +59,10 @@
 	// 		"onAutoForward": "silent"
 	// },
 
+	"onCreateCommand": "make tools",
+
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "go work sync && make tools",
+	"postCreateCommand": "go work sync",
 
 	// Uncomment to connect as a non-root user. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
