--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ jobs:
   unittest:
     strategy:
       matrix:
-        go-version: [1.19.x]
+        go-version: [1.19.x, 1.20.x]
         os: [ubuntu-latest, macos-latest]
       fail-fast: true
     runs-on: ${{matrix.os}}
