--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.19.x, 1.20.x]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
       fail-fast: true
     runs-on: ${{matrix.os}}
     steps:
@@ -25,7 +25,7 @@ jobs:
       with:
         report_paths: report.xml
     - name: Upload code coverage report
-      if: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.19.x' }}
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.20.x' }}
       uses: actions/upload-artifact@v2
       with:
         name: code-coverage-report
