--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -62,7 +62,7 @@
 	"onCreateCommand": "make tools",
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "go work sync",
+	"postStartCommand": "go work sync",
 
 	// Uncomment to connect as a non-root user. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
