--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{matrix.os}}
     steps:
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Set up Go 1.x
       uses: actions/setup-go@v4
       with:
@@ -38,7 +38,7 @@ jobs:
     needs: unittest
     steps:
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Download code coverage report
       uses: actions/download-artifact@v3
       with:
@@ -51,3 +51,16 @@ jobs:
         flags: unittest
         fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
+
+  auto-tag:
+    runs-on: ubuntu-latest
+    needs: unittest
+    if: github.event.pull_request.merged == true
+    steps:
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v4
+    - run: |
+        git config --global user.name "Github Action"
+        git config --global user.email "go-jimu@users.noreply.github.com"
+        echo ${{github.ref_name}}
+        echo ${{github.event.pull_request.base.ref}}
