--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,6 @@ on:
   pull_request:
     branches:
     - master
-    types:
-    - closed
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
@@ -21,7 +19,7 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v4
     - name: Set up Go 1.x
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{matrix.go-version}}
     - name: Install tools
@@ -29,13 +27,13 @@ jobs:
     - name: Unittest
       run: gotestsum --junitfile report.xml --format pkgname --raw-command make test extend=-json
     - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v3
+      uses: mikepenz/action-junit-report@v4
       if: always()
       with:
         report_paths: report.xml
     - name: Upload code coverage report
       if: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.21.x' }}
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: code-coverage-report
         path: coverage.txt
@@ -64,13 +62,20 @@ jobs:
   auto-tag:
     runs-on: ubuntu-latest
     needs: unittest
-    # if: github.event.pull_request.merged == true
+    # https://docs.github.com/en/actions/learn-github-actions/contexts#context-availability
+    # https://docs.github.com/en/actions/learn-github-actions/expressions
+    if: ${{ github.ref == 'refs/heads/master' }}
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v4
     - run: |
-        git config --global user.name "Github Action"
+        git config --global user.name "Github Action Bot"
         git config --global user.email "go-jimu@users.noreply.github.com"
-        echo ${{ github.head_ref || github.ref_name }}
-        echo ${{ github.event.pull_request.base.ref }}
-        echo ${{ github.event.head_commit.message }}
+        type=patch
+        commit_message=${{ github.event.head_commit.message }}
+        pattern="^Merge pull request #\d+ from go-jimu/release.*"
+        if [[ $commit_message =~ $pattern ]]; then
+          type=minor
+        fi
+        ./scripts/auto_bump_version.sh $type
+        git push origin master --follow-tags
