--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,8 @@ jobs:
     # https://docs.github.com/en/actions/learn-github-actions/contexts#context-availability
     # https://docs.github.com/en/actions/learn-github-actions/expressions
     if: ${{ github.ref == 'refs/heads/master' }}
+    env:
+      COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v4
@@ -72,9 +74,8 @@ jobs:
         git config --global user.name "Github Action Bot"
         git config --global user.email "go-jimu@users.noreply.github.com"
         type=patch
-        commit_message=${{ github.event.head_commit.message }}
         pattern="^Merge pull request #\d+ from go-jimu/release.*"
-        if [[ $commit_message =~ $pattern ]]; then
+        if [[ $COMMIT_MESSAGE =~ $pattern ]]; then
           type=minor
         fi
         ./scripts/auto_bump_version.sh $type
