--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,15 +47,15 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v4
     - name: Download code coverage report
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: code-coverage-report
     - name: Code Coverage Report
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         files: coverage.txt
         verbose: true
-        flags: unittest
+        flags: ${{ github.ref_name }}
         fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
 
