--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v4
       with:
-        fetch-tags: true
+        fetch-depth: "0"
     - run: |
         git config --global user.name "Github Action Bot"
         git config --global user.email "go-jimu@users.noreply.github.com"
