update github action

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -30,8 +30,7 @@
 				"github.vscode-pull-request-github",
 				"PascalReitermann93.vscode-yaml-sort",
 				"kennylong.kubernetes-yaml-formatter",
-				"oderwat.indent-rainbow",
-				"github.vscode-github-actions"
+				"oderwat.indent-rainbow"
 			]
 		}
 	},
