--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
   unittest:
     strategy:
       matrix:
-        go-version: [1.21.x, 1.22.x, 1.23.x]
+        go-version: [1.21.x, 1.22.x, 1.23.x, 1.24.x]
         os: [ubuntu-latest]
       fail-fast: true
     runs-on: ${{matrix.os}}
