--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
   unittest:
     strategy:
       matrix:
-        go-version: [1.21.x, 1.22.x, 1.23.x, 1.24.x]
-        os: [ubuntu-latest]
+        go-version: [ 1.23.x, 1.24.x, 1.25.x ]
+        os: [ ubuntu-latest ]
       fail-fast: true
     runs-on: ${{matrix.os}}
     steps:
@@ -36,7 +36,7 @@ jobs:
       with:
         report_paths: report.xml
     - name: Upload code coverage report
-      if: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.22.x' }}
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.24.x' }}
       uses: actions/upload-artifact@v4
       with:
         name: code-coverage-report
